@@ -8,6 +8,12 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Prevent media files from getting spaces (or other forbidden characters)
+in their filenames when bulk-uploaded or added via FTP (already forbidden
+in the web UI). [Michael Peters]
+
+=item *
+
 Updated accidental limit where publisher couldn't handle story_ids over
 4194304. [Mike Lampson & Michael Peters]
 
